Fix to remove incompatibilities with Java 1.4.